fix(typeahead-dropdown): suggestion issue with typeahead dropdown (#2501)
* fix(typeahead-dropdown): suggestion issue with typeahead dropdown

* fix(typeahead-dropdown): fix truncation issue

* fix(test): Associate/Re-associate workitem with an Iteration functional test

* fix(test): add functional test

* fix(test): add randomText constant

--- a/src/app/components/typeahead-dropdown/typeahead-dropdown.component.less
+++ b/src/app/components/typeahead-dropdown/typeahead-dropdown.component.less
@@ -26,6 +26,8 @@
     border: 1px solid;
     border-color: @color-pf-black-300;
     border-radius: 1px;
+    max-height: 200px;
+    overflow-y: auto;
     li {
       a {
         display: block;
